src/test/ui/error-codes/E0512.stderr
error[E0512]: transmute called with types of different sizes
  --> $DIR/E0512.rs:4:23
   |
LL |     unsafe { takes_u8(::std::mem::transmute(0u16)); } //~ ERROR E0512
   |                       ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: u16 (16 bits)
   = note: target type: u8 (8 bits)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
